# NuhxBoard

./: .gitignore  CHANGELOG.md  Cargo.toml  KEYCODES.adoc  KEYCODES.md  README.adoc  README.md  bacon.toml  build.rs  create_release.sh  deny.toml  dist-workspace.toml  flake.nix  install.sh  justfile  nuhxboard.desktop  package.nix  release.nu  rust-toolchain.toml  shell.nix
.github/workflows/: build.yml  release.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs  message.rs  nuhxboard.rs  nuhxboard_types.rs
crates/app/src/ui/: app.rs  canvas.rs  components.rs  mod.rs
crates/app/src/ui/popups/: edit_mode.rs  mod.rs
crates/iced-multi-window/: Cargo.toml  LICENSE  README.md
crates/iced-multi-window/src/: lib.rs
crates/logic/: Cargo.toml
crates/logic/src/: code_convert.rs  lib.rs  listener.rs
crates/types/: Cargo.toml
crates/types/src/: config.rs  layout.rs  lib.rs  settings.rs  style.rs
keyboards/: Geometry Dash.json  README.md  bun.lockb  index.ts  package.json  us_intl_basicmousemove.json
keyboards/BurningFish/steelseries6gv2/: keyboard.json
keyboards/BurningFish/steelseries6gv2mouse/: keyboard.json
keyboards/BurningFish/steelseries6gv2mousemove/: keyboard.json
keyboards/BurningFish/us_intlmouse/: keyboard.json
keyboards/BurningFish/us_intlmousemove/: keyboard.json
keyboards/GamesLegacy/arrows/: keyboard.json
keyboards/GamesLegacy/arrows_numpad/: keyboard.json
keyboards/GamesLegacy/azerty_fps/: keyboard.json
keyboards/GamesLegacy/azerty_sc2/: keyboard.json
keyboards/GamesLegacy/game_dota/: keyboard.json
keyboards/GamesLegacy/game_esa/: keyboard.json
keyboards/GamesLegacy/game_fps1/: keyboard.json
keyboards/GamesLegacy/game_fps1_mm/: keyboard.json
keyboards/GamesLegacy/game_fps2/: keyboard.json
keyboards/GamesLegacy/game_isaac/: keyboard.json
keyboards/GamesLegacy/game_keys1/: keyboard.json
keyboards/GamesLegacy/game_worms/: keyboard.json
keyboards/GamesLegacy/numpad/: keyboard.json
keyboards/GamesLegacy/us_intl_fpsgame/: keyboard.json
keyboards/GamesLegacy/us_intl_fpsgame2/: keyboard.json
keyboards/GamesLegacy/us_intl_jc2/: keyboard.json
keyboards/GamesLegacy/us_intl_sc2/: keyboard.json
keyboards/GamesLegacy/us_intl_surfandbhop/: keyboard.json
keyboards/GamesLegacy/wsadmouse/: keyboard.json
keyboards/HaleyHalcyon/1button/: keyboard.json
keyboards/HaleyHalcyon/2button/: keyboard.json
keyboards/HaleyHalcyon/2button-puzzle/: keyboard.json
keyboards/HaleyHalcyon/rhythm4/: keyboard.json
keyboards/HaleyHalcyon/rhythm5/: keyboard.json
keyboards/HaleyHalcyon/rhythm6/: keyboard.json
keyboards/HaleyHalcyon/rhythm7/: keyboard.json
keyboards/Normal/azerty/: keyboard.json
keyboards/Normal/azerty_basic/: keyboard.json
keyboards/Normal/azerty_nonum/: keyboard.json
keyboards/Normal/colemak/: keyboard.json
keyboards/Normal/de/: keyboard.json
keyboards/Normal/de_basic/: keyboard.json
keyboards/Normal/de_en_nonum/: keyboard.json
keyboards/Normal/de_nonum/: keyboard.json
keyboards/Normal/dvorak/: keyboard.json
keyboards/Normal/mouseAll/: keyboard.json
keyboards/Normal/mouseMovement/: keyboard.json
keyboards/Normal/scandi/: keyboard.json
keyboards/Normal/scandi_basic/: keyboard.json
keyboards/Normal/scandi_nonum/: keyboard.json
keyboards/Normal/uk/: keyboard.json
keyboards/Normal/us_intl/: keyboard.json
keyboards/Normal/us_intl_basic/: keyboard.json
keyboards/Normal/us_intl_basicmouse/: keyboard.json
keyboards/Normal/us_intl_basicmousemove/: keyboard.json
keyboards/Normal/us_intl_nonum/: keyboard.json
keyboards/Normal/us_intl_statekeys/: keyboard.json
keyboards/Normal/workman/: keyboard.json
keyboards/TheCore/TheCore/: TheCore.style  keyboard.json
keyboards/joao7yt/fps/: clean-black_clean-white.style  keyboard.json  normal-black_normal-white.style  normal-white_normal-black.style  outline-black_normal-black.style  outline-black_normal-white.style  outline-black_outline-white.style  outline-white_normal-black.style  outline-white_normal-white.style  outline-white_outline-black.style  outlined-black_normal-white.style  outlined-black_outlined-white.style  outlined-white_normal-black.style  outlined-white_outlined-black.style
keyboards/quake/quake/: keyboard.json  quake-champions.style
keyboards/quake/quakehighres/: keyboard.json  quake-champions-highres.style
keyboards/wheels/alienware 17/: clean-black_clean-white.style  clean-white_clean-black.style  keyboard.json  normal-black_normal-white.style  normal-white_normal-black.style
logic/src/: lib.rs  listener.rs
media/: NuhxBoard.xcf
schemas/: layout.json  style.json
src/: canvas.rs  code_convert.rs  config.rs  listener.rs  main.rs  message.rs  nuhxboard.rs  nuhxboard.rs~  nuhxboard.ru~  nuhxboard.rv~  nuhxboard.rx~  nuhxboard.ry~  nuhxboard.rz~  style.rs  types.rs
src/logic/: app.rs  code_convert.rs  listener.rs  mod.rs
src/types/: config.rs  mod.rs  settings.rs  style.rs  stylesheets.rs
src/ui/: app.rs  canvas.rs  components.rs  keyboard.rs  mod.rs
src/ui/popups/: edit_mode.rs  mod.rs
types/src/: config.rs  style.rs
wix/: main.wxs
