[package]
name = "nuhxboard"
description = "Cross-platform input visualizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
exclude = [
  "keyboards",
  ".github",
  "NuhxBoard.xcf",
  "README.adoc",
  "deny.toml",
  "dist-workspace.toml",
  "flake.*",
  "justfile",
  "keyboards.zip",
  "media",
  "schemas",
  "wix",
  "CHANGELOG.md",
  "KEYCODES.adoc",
]

[package.metadata.wix]
upgrade-guid = "531C0F4B-FFE1-4F4C-BD42-A8449DB1E0BD"
path-guid = "6BCE453A-D71C-4EF5-A85D-B4A43D72A35F"
license = false
eula = false

[dependencies]
iced-multi-window = "1.1.0"
async-std.workspace = true
color-eyre = { version = "0.6.3", default-features = false }
colorgrad = "0.7.1"
display-info.workspace = true
futures.workspace = true
geo.workspace = true
home = "0.5.11"
iced = { workspace = true, features = [
  "image",
  "canvas",
  "advanced",
  "async-std",
] }
iced_aw = "0.12.2"
image = { version = "0.25.6", features = ["ico"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
serde_json.workspace = true
zip = "2.6.1"
iced_fonts = "0.2.1"
nuhxboard-types = { path = "crates/types", version = "0.7.0" }
nuhxboard-logic = { path = "crates/logic", version = "0.7.0" }
rdev.workspace = true
nalgebra = "0.33.2"
thiserror.workspace = true
confy = "0.6.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
clap = { version = "4.5.36", features = ["derive"] }

[build-dependencies]
schemars.workspace = true
nuhxboard-types = { path = "crates/types", version = "0.7.0" }
serde_json = "1.0.140"

[features]
debug = ["iced/debug"]

[workspace]
resolver = "2"
members = ["crates/logic", "crates/types"]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Devin Droddy <devin.droddy@gmail.com>"]
repository = "https://github.com/justDeeevin/NuhxBoard"
keywords = ["keyboard", "streaming", "overlay", "linux", "nohboard"]
categories = ["visualization"]

[workspace.dependencies]
geo = "0.30.0"
iced = "0.13.1"
serde_json = "1.0.140"
futures = "0.3.31"
rdev = { git = "https://github.com/rustdesk-org/rdev", rev = "f9b60b1dd0f3300a1b797d7a74c116683cd232c8" }
display-info = "0.5.4"
schemars = "0.8.22"
async-std = "1.13.1"
thiserror = "2.0.12"
# rust-version = "1.72.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
