[package]
name = "nuhxboard"
description = "Cross-platform input visualizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
exclude = [
  "keyboards",
  ".github",
  "NuhxBoard.xcf",
  "README.adoc",
  "deny.toml",
  "dist-workspace.toml",
  "flake.*",
  "justfile",
  "keyboards.zip",
  "schemas",
  "wix",
  "CHANGELOG.md",
  "KEYCODES.adoc",
]

[package.metadata.wix]
upgrade-guid = "531C0F4B-FFE1-4F4C-BD42-A8449DB1E0BD"
path-guid = "6BCE453A-D71C-4EF5-A85D-B4A43D72A35F"
license = false
eula = false

[dependencies]
iced-multi-window = { path = "./crates/iced-multi-window", version = "2.0.0" }
smol.workspace = true
color-eyre = { version = "0.6.5", default-features = false }
display-info.workspace = true
futures.workspace = true
geo.workspace = true
home = "0.5.11"
iced = { workspace = true, features = ["image", "canvas", "advanced", "smol"] }
iced_aw = "0.12.2"
image = { version = "0.25.6", features = ["ico"] }
reqwest = { version = "0.12.19", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
serde_json.workspace = true
zip = "4.0.0"
iced_fonts = "0.2.1"
nuhxboard-types = { path = "crates/types", version = "0.6.6" }
nuhxboard-logic = { path = "crates/logic", version = "0.6.6" }
rdevin.workspace = true
nalgebra = "0.33.2"
thiserror.workspace = true
confy = "1.0.0"
tracing.workspace = true
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
iced_graphics = { version = "0.13.0", features = ["geometry"] }
clap = { version = "4.5.39", features = ["derive"] }
colorgrad.workspace = true

[build-dependencies]
schemars.workspace = true
nuhxboard-types = { path = "crates/types", version = "0.6.6" }
serde_json = "1.0.140"

[features]
debug = ["iced/debug"]

[workspace]
resolver = "2"
members = ["crates/logic", "crates/types", "crates/iced-multi-window"]

[workspace.package]
version = "0.6.6"
edition = "2021"
license = "GPL-3.0"
authors = ["Devin Droddy <devin.droddy@gmail.com>"]
repository = "https://github.com/justDeeevin/NuhxBoard"
keywords = ["keyboard", "streaming", "overlay", "linux", "nohboard"]
categories = ["visualization"]

[workspace.dependencies]
geo = "0.30.0"
iced = "0.13.1"
serde_json = "1.0.140"
futures = "0.3.31"
rdevin = "0.1.0"
display-info = "0.5.4"
schemars = "1.0.0-alpha.20"
smol = "2.0.2"
thiserror = "2.0.12"
colorgrad = "0.7.2"
tracing = "0.1.41"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
