[package]
name = "nuhxboard"
description = "Cross-platform input visualizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
exclude = [
  "keyboards",
  ".github",
  "NuhxBoard.xcf",
  "README.adoc",
  "deny.toml",
  "dist-workspace.toml",
  "flake.*",
  "justfile",
  "keyboards.zip",
  "schemas",
  "wix",
  "CHANGELOG.md",
  "KEYCODES.adoc",
]

[package.metadata.wix]
upgrade-guid = "531C0F4B-FFE1-4F4C-BD42-A8449DB1E0BD"
path-guid = "6BCE453A-D71C-4EF5-A85D-B4A43D72A35F"
license = false
eula = false

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "6279590" }
iced_core = { git = "https://github.com/iced-rs/iced.git", rev = "6279590" }
iced_widget = { git = "https://github.com/iced-rs/iced.git", rev = "6279590" }
iced_graphics = { git = "https://github.com/iced-rs/iced.git", rev = "6279590" }

[dependencies]
iced-multi-window = { path = "./crates/iced-multi-window", version = "2.0.0" }
smol.workspace = true
color-eyre = { version = "0.6.5", default-features = false }
display-info.workspace = true
futures.workspace = true
geo.workspace = true
home = "0.5.11"
iced = { workspace = true, features = ["image", "canvas", "advanced", "smol"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", rev = "2c2a5c22945c30ed6a9ac71bbc79a77c0624ff99" }
image = { version = "0.25.8", features = ["ico"] }
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
serde_json.workspace = true
zip = "6.0.0"
nuhxboard-types = { path = "crates/types", version = "1.0.0" }
nuhxboard-logic = { path = "crates/logic", version = "1.0.0" }
rdevin.workspace = true
nalgebra = "0.34.1"
thiserror.workspace = true
confy = "1.0.0"
tracing.workspace = true
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
iced_graphics = { version = "0.14.0-dev", features = ["geometry"] }
clap = { version = "4.5.48", features = ["derive"] }
colorgrad.workspace = true

[build-dependencies]
schemars.workspace = true
nuhxboard-types = { path = "crates/types", version = "1.0.0" }
serde_json.workspace = true

[features]
debug = ["iced/debug"]

[workspace]
resolver = "2"
members = ["crates/logic", "crates/types", "crates/iced-multi-window"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Devin Droddy <devin.droddy@gmail.com>"]
repository = "https://github.com/justDeeevin/NuhxBoard"
keywords = ["keyboard", "streaming", "overlay", "linux", "nohboard"]
categories = ["visualization"]

[workspace.dependencies]
geo = "0.31.0"
iced = "0.14.0-dev"
serde_json = "1.0.145"
futures = "0.3.31"
rdevin = "0.1.0"
display-info = "0.5.6"
schemars = "1.0.4"
smol = "2.0.2"
thiserror = "2.0.17"
colorgrad = "0.7.2"
tracing = "0.1.41"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
