[package]
name = "nuhxboard"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Devin Droddy <devin.droddy@gmail.com>"]
description = "A cross-platform alternative to NohBoard"
repository = "https://github.com/justDeeevin/NuhxBoard"
keywords = ["keyboard", "virtual", "overlay", "linux", "nohboard"]
categories = ["visualization"]
readme = "README.md"
# rust-version = "1.72.0"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "NuhxBoard.png"]

[package.metadata.wix]
upgrade-guid = "531C0F4B-FFE1-4F4C-BD42-A8449DB1E0BD"
path-guid = "6BCE453A-D71C-4EF5-A85D-B4A43D72A35F"
license = false
eula = false

[dependencies]
iced-multi-window = { git = "https://github.com/justdeeevin/iced-multi-window" }
async-std = "1.13.0"
color-eyre = { version = "0.6.3", default-features = false }
colorgrad = "0.7.0"
display-info.workspace = true
eyre = "0.6.12"
futures.workspace = true
geo.workspace = true
home = "0.5.9"
iced = { workspace = true, features = [
  "image",
  "canvas",
  "advanced",
  "async-std",
] }
iced_aw = "0.11.0"
image = { version = "0.25.2", features = ["ico"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
serde_json.workspace = true
zip = "2.2.0"
iced_fonts = "0.1.1"
types = { path = "../types" }
logic = { path = "../logic" }
rdev.workspace = true
nalgebra = "0.33.0"

[build-dependencies]
schemars.workspace = true
types = { path = "../types" }
serde_json = "1.0.128"

[features]
grab = ["logic/grab"]
debug = ["iced/debug"]
