[package]
name = "iced-multi-window"
version = "1.1.0"
edition = "2021"
authors = ["Devin Droddy <devin.droddy@gmail.com>"]
license = "GPL-3.0"
description = "Utilities for managing many windows in an iced application"
repository = "https://github.com/justDeeevin/iced-multi-window"
keywords = ["iced", "multi-window", "app", "gui", "refactor"]
categories = ["gui"]
readme = "README.md"
rust-version = "1.72.1"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
dyn-clone = "1.0.19"
iced.workspace = true
