[package]
name = "iced-multi-window"
version = "2.0.1"
edition = "2021"
authors = ["Devin Droddy <devin.droddy@gmail.com>"]
license = "MIT"
description = "Utilities for managing many windows in an iced application"
repository = "https://github.com/justDeeevin/nuhxboard"
keywords = ["iced", "multi-window", "app", "gui", "refactor"]
categories = ["gui"]
readme = "README.md"
rust-version = "1.72.1"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
dyn-clone = "1.0.19"
iced.workspace = true
