[package]
name = "nuhxboard-logic"
description = "Input listener for NuhxBoard"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
futures.workspace = true
iced.workspace = true
rdev.workspace = true
async-stream = "0.3.6"
async-std.workspace = true
thiserror.workspace = true
