[package]
name = "nuhxboard-logic"
description = "Input listener for NuhxBoard"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
futures.workspace = true
iced.workspace = true
rdevin.workspace = true
async-stream = "0.3.6"
smol.workspace = true
thiserror.workspace = true
blocking = "1.6.1"
async-channel = "2.3.1"
