[package]
name = "types"
description = "Types for NuhxBoard configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
display-info.workspace = true
geo.workspace = true
iced.workspace = true
ordered-float = "4.6.0"
schemars.workspace = true
serde = { version = "1.0.210", features = ["derive"] }
serde_json.workspace = true
