[package]
name = "nuhxboard-types"
description = "Types for NuhxBoard configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
display-info.workspace = true
geo.workspace = true
iced.workspace = true
ordered-float = { version = "5.0.0", features = ["serde"] }
schemars.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json.workspace = true
bitflags = "2.9.0"
colorgrad.workspace = true
